sjeng/use_undefined_identifier/c3/eval
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/eval/src/eval.c:1024:7: error: use of undeclared identifier 'dword_66859C'
if ( !dword_66859C[wking_loc] ) 
      ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/eval/src/eval.c:1027:12: error: use of undeclared identifier 'dword_66859C'
else if ( !dword_66859C[v19] ) 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/eval/src/eval.c:1088:7: error: use of undeclared identifier 'dword_66859C'
if ( !dword_66859C[bking_loc] ) 
      ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/eval/src/eval.c:1091:12: error: use of undeclared identifier 'dword_66859C'
else if ( !dword_66859C[v34] ) 
           ^
4 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/eval/src/obj/eval.o] Error 1
